DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Periodic_Billing_Next_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Periodic_Billing_Next_Date__c</fullName>
    <inlineHelpText>Identifies the date the next periodic billing event will occur</inlineHelpText>
    <label>Periodic Billing Next Date</label>
    <type>Date</type>
</CustomField>