DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Program__c.field-meta.xml
<CustomField>
    <fullName>amc__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Links to the Program record this Project relates to</inlineHelpText>
    <label>Program</label>
    <referenceTo>amc__Program__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>