DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Program_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>amc__Program_Sort_Order__c</fullName>
    <description>Identifies the column order that the Project should appear on the Program Planner</description>
    <inlineHelpText>Identifies the column order that the Project should appear on the Program Planner</inlineHelpText>
    <label>Program Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>