DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Day_Rate__c</fullName>
    <inlineHelpText>Select whether the man-hours for this Project are based on the Standard &apos;Day Rate&apos; value or the &apos;Hourly Rate&apos; of the individual Action Owners</inlineHelpText>
    <label>Billing Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Role-based</fullName>
            </value>
            <value>
                <fullName>Skill-based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>