DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Gantt_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Gantt_Image_Link__c</fullName>
    <description>URL to the most recent export of the project&apos;s Gantt Chart exported to PNG</description>
    <label>Project Gantt Image Link</label>
    <type>Url</type>
</CustomField>