DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Notes_RT__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Notes_RT__c</fullName>
    <inlineHelpText>Detailed Notes about the Project</inlineHelpText>
    <label>Project Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>