DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Owner</label>
    <referenceTo>amc__Role__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>