DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Owner_Expense_Approval_Reqd__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Expense_Approval_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether the Role specified as the Project Owner on this Project needs to approve Expenses</inlineHelpText>
    <label>Project Owner Expense Approval Reqd</label>
    <type>Checkbox</type>
</CustomField>