DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Owner_Timesheet_Approval_Reqd__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Owner_Timesheet_Approval_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether the person specified as the ‘Project Owner’ on the Project record needs to approve Time Logs</inlineHelpText>
    <label>Project Owner Timesheet Approval Reqd</label>
    <type>Checkbox</type>
</CustomField>