DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Project_Reference__c.field-meta.xml
<CustomField>
    <fullName>amc__Project_Reference__c</fullName>
    <inlineHelpText>Identifies the reference number for this Project</inlineHelpText>
    <label>Project Reference #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>