DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Projected_Hours_Remaining_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Hours_Remaining_Billable__c</fullName>
    <inlineHelpText>Identifies the projected number of billable hours remaining on all Actions within this Project</inlineHelpText>
    <label>Projected Hours Remaining - Billable</label>
    <summarizedField>amc__Milestone__c.amc__Projected_Hours_Remaining_Billable__c</summarizedField>
    <summaryForeignKey>amc__Milestone__c.amc__Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>