DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Projected_Total_Hours_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>amc__Projected_Total_Hours_Non_Billable__c</fullName>
    <formula>amc__Hours_Completed_Non_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the total projected number of non billable hours on all Actions within this Project. Formula: Hours Completed - Non Billable + Projected Hours Remaining - Non Billable</inlineHelpText>
    <label>Projected Total Hours - Non Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>