DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Purchase_Order_Total_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>amc__Purchase_Order_Total_Amount_Outstanding__c</fullName>
    <formula>amc__Purchase_Order_Total_Amount__c -  amc__Purchase_Order_Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order- Total Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>