DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Purchase_Order_Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>amc__Purchase_Order_Total_Amount_Paid__c</fullName>
    <description>Identifies the total amount paid of all Purchase Orders relating to this Project</description>
    <inlineHelpText>Identifies the total amount paid of all Purchase Orders relating to this Project</inlineHelpText>
    <label>Purchase Order - Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>