DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Role_Manager_Timesheet_Approval_Reqd__c.field-meta.xml
<CustomField>
    <fullName>amc__Role_Manager_Timesheet_Approval_Reqd__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies whether the person specified as the ‘Timesheet Approver’ on the Action Owner’s Role record needs to approve Time Logs</inlineHelpText>
    <label>Role Manager Timesheet Approval Reqd</label>
    <type>Checkbox</type>
</CustomField>