DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Scheduled_Performance__c.field-meta.xml
<CustomField>
    <fullName>amc__Scheduled_Performance__c</fullName>
    <formula>If(  amc__Cost_Budget__c   = 0, &quot;No Measurement&quot;, if((( amc__Cost_Schedule__c +  amc__Material_Costs_Scheduled__c +  amc__Anticipated_Project_Expenses__c  ) / amc__Cost_Budget__c)&lt;0.8,
&quot;Under Project Budget&quot;, 
if((( amc__Cost_Schedule__c +  amc__Material_Costs_Scheduled__c +  amc__Anticipated_Project_Expenses__c) / amc__Cost_Budget__c)&lt;=1,
&quot;Within Project Budget&quot;,
&quot;Over Project Budget&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows performance based on Scheduled Hours &amp; Material Costs &amp; Anticipated Project Expenses</inlineHelpText>
    <label>Scheduled Performance</label>
    <type>Text</type>
</CustomField>