DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>amc__Sub_Category__c</fullName>
    <description>Identifies the sub category this project belongs to</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>