DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Tax_Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>amc__Tax_Amount_Credited__c</fullName>
    <inlineHelpText>Identifies the Tax Amount of all Credit Notes related to this Project</inlineHelpText>
    <label>Tax Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>