DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Tax_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>amc__Tax_Amount_Invoiced__c</fullName>
    <label>Tax Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>