DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Total_Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Amount_Credited__c</fullName>
    <formula>amc__Total_Credited__c + amc__Tax_Amount_Credited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the Total Amount of all Credit Notes related to this Project</inlineHelpText>
    <label>Total Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>