DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Total_Hours_Forecast__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Hours_Forecast__c</fullName>
    <formula>amc__Hours_Actual__c  + amc__Hours_Forecast_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Field: Sum of the total hours forecasted, billable and non billable</inlineHelpText>
    <label>Total Hours Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>