DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Outstanding__c</fullName>
    <inlineHelpText>Identifies the Total Outstanding value based on the ‘Total Outstanding’ field of all related Billing Events where Type = Invoice</inlineHelpText>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>