DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Total_Project_Cost_Actual__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Project_Cost_Actual__c</fullName>
    <formula>IF(ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Hours_Completed_Value_Cost__c + amc__Expense_Summary__c + amc__Actual_Project_Expenses__c, amc__Hours_Completed_Value_Cost__c + amc__Expense_Summary__c + amc__Actual_Project_Expenses_Non_Billable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides a cost summary using Hours Completed Value (Cost) + Material Costs Completed + Actual Project Expenses</inlineHelpText>
    <label>Total Project Cost (Actual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>