DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Total_Project_Cost_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Project_Cost_Scheduled__c</fullName>
    <formula>IF(ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price&quot;), amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c + amc__Anticipated_Project_Expenses__c, amc__Hours_Scheduled_Value_Cost__c + amc__Material_Costs_Scheduled__c)</formula>
    <inlineHelpText>Formula Field: Summarises the Hours Scheduled Value (Cost) + Material Costs Scheduled + Anticipated Project Expenses to provide full project costs</inlineHelpText>
    <label>Total Project Cost (Scheduled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>