DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Total_Projected_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>amc__Total_Projected_Hours_Remaining__c</fullName>
    <formula>amc__Projected_Hours_Remaining_Billable__c + amc__Projected_Hours_Remaining_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Identifies the total projected number of hours remaining on all Actions within this Project</inlineHelpText>
    <label>Total Projected Hours Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>