DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Weekly_Status_report_End_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Weekly_Status_report_End_Date__c</fullName>
    <inlineHelpText>Identifies the End Date that will be applied as a filter for the weekly status report. Only Actions with a Start Date or End Date less than this date will be included</inlineHelpText>
    <label>Weekly Status report - End Date</label>
    <type>Date</type>
</CustomField>