DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Weekly_Status_Report_Hero_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>amc__Weekly_Status_Report_Hero_Image_URL__c</fullName>
    <inlineHelpText>Identifes the URL that will be used for the Hero Image on the Status Report Title Page</inlineHelpText>
    <label>Weekly Status Report - Hero Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>