DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Weekly_Status_Report_Include_CR__c.field-meta.xml
<CustomField>
    <fullName>amc__Weekly_Status_Report_Include_CR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include the Change Request records in the Weekly Status Report?</inlineHelpText>
    <label>Weekly Status Report - Include CRs</label>
    <type>Checkbox</type>
</CustomField>