DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Weekly_Status_Report_Include_Gantt__c.field-meta.xml
<CustomField>
    <fullName>amc__Weekly_Status_Report_Include_Gantt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>include the gantt chart in the weekly status report?</description>
    <label>Weekly Status Report - Include Gantt</label>
    <type>Checkbox</type>
</CustomField>