DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Weekly_Status_Report_Include_Time_Logs__c.field-meta.xml
<CustomField>
    <fullName>amc__Weekly_Status_Report_Include_Time_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>include these records in the weekly status report?</description>
    <label>Weekly Status Report - Include Time Logs</label>
    <type>Checkbox</type>
</CustomField>