DigicielFull/force-app/main/default/objects/amc__Project__c/fields/amc__Weekly_Status_Report_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>amc__Weekly_Status_Report_Start_Date__c</fullName>
    <inlineHelpText>Identifies the Start Date that will applied as a filter for the weekly status report. Only Actions with a Start Date or End Date greater than this date will be included</inlineHelpText>
    <label>Weekly Status Report - Start Date</label>
    <type>Date</type>
</CustomField>