DigicielFull/force-app/main/default/objects/amc__Project__c/validationRules/amc__Ensure_Periodic_Frequency_only_for_TM.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Periodic_Frequency_only_for_TM</fullName>
    <active>true</active>
    <description>Periodic Frequency can only be used if Billing Type = Time &amp; Materials and Billing Cycle = Periodic or if Billing Type = Fixed Price or Fixed Price + Expenses and Billing Cycle = Retainer</description>
    <errorConditionFormula>AND( NOT(ISBLANK(TEXT( amc__Periodic_Billing_Frequency__c ))) , OR( AND( OR( ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price&quot;), ISPICKVAL(amc__Billing_Type__c, &quot;Fixed Price + Expenses&quot;)) , NOT(ISPICKVAL(amc__Billing_Cycle__c, &quot;Retainer&quot;)) ) , AND(ISPICKVAL( amc__Billing_Type__c , &quot;Time &amp; Materials&quot;), NOT(ISPICKVAL(amc__Billing_Cycle__c, &quot;Periodic&quot;)))) )</errorConditionFormula>
    <errorMessage>You can only specify a Periodic Billing Frequency where Billing Type = Time &amp; Materials and Billing Cycle = Periodic or where Billing Type = Fixed Price or Fixed Price + Expenses and Billing Cycle = Retainer</errorMessage>
</ValidationRule>