DigicielFull/force-app/main/default/objects/amc__Project__c/validationRules/amc__Ensure_Rate_Card_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Ensure_Rate_Card_Selected</fullName>
    <active>true</active>
    <description>Ensure a Rate Card is specified if Billing Rate or Cost Rate are set to Rate Card</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(amc__Project_Day_Rate__c, &quot;Rate Card&quot;), ISPICKVAL(amc__Cost_Rate__c, &quot;Rate Card&quot;)), ISBLANK(amc__Rate_Card__c))</errorConditionFormula>
    <errorMessage>To use Rate Card in Billing Rate or Cost Rate, you must specify a value in the Rate Card field</errorMessage>
</ValidationRule>