DigicielFull/force-app/main/default/objects/amc__Project__c/validationRules/amc__Hex_Colour_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Hex_Colour_Validation</fullName>
    <active>true</active>
    <description>Validates the &apos;Colour Hex&apos; value.</description>
    <errorConditionFormula>AND(
!ISBLANK(amc__Colour_Hex__c),
!REGEX(amc__Colour_Hex__c, &quot;^[a-fA-F0-9]{6}|[a-fA-F0-9]{3}$&quot;)
)</errorConditionFormula>
    <errorMessage>Not a valid colour</errorMessage>
</ValidationRule>