DigicielFull/force-app/main/default/objects/amc__Project__c/validationRules/amc__Retainer_Cannot_Be_Used_With_T_and_M.validationRule-meta.xml
<ValidationRule>
    <fullName>amc__Retainer_Cannot_Be_Used_With_T_and_M</fullName>
    <active>true</active>
    <description>Prevents Billing Cycle beint set to Retainer if Billing Type is Time &amp; Materials</description>
    <errorConditionFormula>AND( ISPICKVAL(amc__Billing_Cycle__c, &quot;Retainer&quot;) , ISPICKVAL(amc__Billing_Type__c, &quot;Time &amp; Materials&quot;) )</errorConditionFormula>
    <errorMessage>You cannot set Billing Cycle to Retainer if Billing Type is Time &amp; Materials</errorMessage>
</ValidationRule>